sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:8: error: ')' expected but $XMLSTART$< found.
      if (getValeur(i) <M) {j=i;m = getValeur(i)}
                       ^AlgSelectionSort:9: error: illegal start of simple expression
    }
    ^