sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  val n = getNombreValeurs
  def min(a:Int,b:Int):Int = {
    var M = getValeur(a)
    var j = a
    for (i <- a+1 to b) {
      if (getValeur(i) <M) {j=i;m = getValeur(i)}
    }
   return j
  }
  for (i <- 0 to n-1) {
    echange(i,min(i,n))
  }
}